Setting up JavaFX and Gradle