@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group = 'com.kodilla'
@@ -9,10 +10,41 @@ repositories {
     mavenCentral()
 }
 
+def platform = org.gradle.internal.os.OperatingSystem.current().isWindows() ? 'win' :
+        org.gradle.internal.os.OperatingSystem.current().isMacOsX() ? 'mac' :
+                'linux'
+
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation "org.openjfx:javafx-base:21.0.8:${platform}"
+    implementation "org.openjfx:javafx-controls:21.0.8:${platform}"
+    implementation "org.openjfx:javafx-graphics:21.0.8:${platform}"
+    implementation "org.openjfx:javafx-fxml:21.0.8:${platform}"
+
+    testImplementation "org.junit.jupiter:junit-jupiter:5.10.0"
 }
+
+application {
+    mainClass = 'com.kodilla.Main'
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
+tasks.withType(JavaExec) {
+    def javafxPath = configurations.runtimeClasspath
+            .filter { it.name.contains("javafx") }
+            .collect { it.absolutePath }
+            .join(File.pathSeparator)
+
+    jvmArgs += [
+            '--module-path', javafxPath,
+            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
+}
+
 
 test {
     useJUnitPlatform()
